--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tribe</title>
+    <title>Kroo</title>
     <link
       rel="icon"
       type="image/png"
@@ -28,7 +28,7 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Tribe</a></h1>
+        <h1 class=""><a href="/profile">Kroo</a></h1>
         <span></span>
       </div>
     </header>
