--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,7 +16,7 @@
         <a class="btn btn-primary" href="/wishlistFeed">Wishlists</a>
       </div>  
       <div class="mt-5">
-        <h2>Invite Tribe Members</h2>
+        <h2>Invite Kroo Members</h2>
         <form action="" enctype="multipart/form-data" method="POST">
           <div class="mb-3">
             <label for="invitee" class="form-label">Email</label>
